Clean up question mapper